<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
        <relativePath/>
        <!-- lookup parent from repository -->
    </parent>
    <groupId>studio.ikara</groupId>
    <artifactId>core</artifactId>
    <version>1.1.0</version>
    <name>Core</name>
    <description>Core Server for Ikara-life</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <base.package>studio.ikara</base.package>
        <base.package.dir>studio/ikara</base.package.dir>
        <database.db.name>core</database.db.name>
        <database.schema.name>core</database.schema.name>
        <env.ENVIRONMENT>dev</env.ENVIRONMENT>
        <java.version>25</java.version>
        <jaxb.api.version>2.3.1</jaxb.api.version>
        <jaxb.runtime.version>4.0.0</jaxb.runtime.version>
        <jib.maven.plugin.version>3.4.6</jib.maven.plugin.version>
        <jooq.dir>${main.java.dir}/${base.package.dir}/${server.package.dir}/jooq</jooq.dir>
        <jooq.package>${base.package}.${server.package}.jooq</jooq.package>
        <jooq.version>3.20.5</jooq.version>
        <jsoup.version>1.21.1</jsoup.version>
        <jwt.version>0.12.6</jwt.version>
        <langchain4j.beta.version>1.1.0-beta7</langchain4j.beta.version>
        <!-- Dependency versions -->
        <langchain4j.version>1.1.0</langchain4j.version>
        <main.java.dir>src/main/java</main.java.dir>
        <palantir-java.format.version>2.67.0</palantir-java.format.version>
        <playwright.version>1.53.0</playwright.version>
        <mysql.jdbc.password>Vishwas123#</mysql.jdbc.password>
        <mysql.jdbc.url>jdbc:mysql://localhost:3306/${database.db.name}</mysql.jdbc.url>
        <mysql.jdbc.user>root</mysql.jdbc.user>
        <resources.dir>src/main/resources</resources.dir>
        <server.package>core</server.package>
        <server.package.dir>core</server.package.dir>
        <spotless.version>2.44.5</spotless.version>
        <spring-cloud.version>2025.0.0</spring-cloud.version>
        <test.java.dir>src/test/java</test.java.dir>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <!-- jOOQ -->
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
            <version>${jooq.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq-codegen</artifactId>
            <version>${jooq.version}</version>
        </dependency>
        <!-- MySQL -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-mysql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.8.9</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.amqp</groupId>
            <artifactId>spring-rabbit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-config</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-commons</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.retry</groupId>
            <artifactId>spring-retry</artifactId>
        </dependency>
        <dependency>
            <groupId>studio.ikara</groupId>
            <artifactId>commons</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.lettuce</groupId>
            <artifactId>lettuce-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>spring-milestone</id>
            <name>Spring Milestone Repository</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>spring-snapshot</id>
            <name>Spring Snapshot Repository</name>
            <url>https://repo.spring.io/snapshot</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib.maven.plugin.version}</version>
                <configuration>
                    <container>
                        <jvmFlags>
                            <jvmFlag>--sun-misc-unsafe-memory-access=allow</jvmFlag>
                        </jvmFlags>
                    </container>
                    <from>
                        <image>eclipse-temurin:25-jre-alpine</image>
                    </from>
                    <to>
                        <image>ghcr.io/ikara-life/core</image>
                        <tags>
                            <tag>${env.ENVIRONMENT}</tag>
                            <tag>${project.version}</tag>
                        </tags>
                    </to>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <!-- JDK 24+ warns on sun.misc.Unsafe memory access by default (JEP 498). -->
                    <jvmArguments>--sun-misc-unsafe-memory-access=allow</jvmArguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>jooq</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jooq</groupId>
                        <artifactId>jooq-codegen-maven</artifactId>
                        <configuration>
                            <jdbc>
                                <driver>com.mysql.cj.jdbc.Driver</driver>
                                <url>${mysql.jdbc.url}</url>
                                <user>${mysql.jdbc.user}</user>
                                <password>${mysql.jdbc.password}</password>
                            </jdbc>
                            <generator>
                                <database>
                                    <name>org.jooq.meta.mysql.MySQLDatabase</name>
                                    <includes>CORE_.*</includes>
                                    <inputSchema>${database.schema.name}</inputSchema>
                                    <forcedTypes/>
                                </database>
                                <generate>
                                    <deprecated>false</deprecated>
                                    <relations>true</relations>
                                    <records>true</records>
                                    <immutablePojos>false</immutablePojos>
                                    <fluentSetters>true</fluentSetters>
                                </generate>
                                <target>
                                    <packageName>${jooq.package}</packageName>
                                    <directory>${main.java.dir}</directory>
                                </target>
                            </generator>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>javax.xml.bind</groupId>
                                <artifactId>jaxb-api</artifactId>
                                <version>${jaxb.api.version}</version>
                            </dependency>
                            <dependency>
                                <groupId>org.glassfish.jaxb</groupId>
                                <artifactId>jaxb-runtime</artifactId>
                                <version>${jaxb.runtime.version}</version>
                            </dependency>
                            <dependency>
                                <groupId>com.mysql</groupId>
                                <artifactId>mysql-connector-j</artifactId>
                                <version>9.3.0</version>
                            </dependency>
                        </dependencies>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>generate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>spotless</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.diffplug.spotless</groupId>
                        <artifactId>spotless-maven-plugin</artifactId>
                        <version>${spotless.version}</version>
                        <configuration>
                            <java>
                                <includes>
                                    <include>${main.java.dir}/**/*.java</include>
                                    <include>${test.java.dir}/**/*.java</include>
                                </includes>
                                <excludes>
                                    <exclude>${jooq.dir}/**/*.java</exclude>
                                </excludes>
                                <palantirJavaFormat>
                                    <version>${palantir-java.format.version}</version>
                                    <style>PALANTIR</style>
                                </palantirJavaFormat>
                                <importOrder/>
                                <removeUnusedImports/>
                                <formatAnnotations/>
                                <trimTrailingWhitespace/>
                                <endWithNewline/>
                                <toggleOffOn/>
                            </java>
                            <pom>
                                <includes>
                                    <include>pom.xml</include>
                                </includes>
                                <sortPom>
                                    <encoding>UTF-8</encoding>
                                    <endWithNewline>true</endWithNewline>
                                    <expandEmptyElements>false</expandEmptyElements>
                                    <indentAttribute>all</indentAttribute>
                                    <keepBlankLines>false</keepBlankLines>
                                    <nrOfIndentSpace>4</nrOfIndentSpace>
                                    <sortDependencies>scope,groupId,artifactId</sortDependencies>
                                    <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
                                    <sortDependencyManagement>groupId,artifactId</sortDependencyManagement>
                                    <sortExecutions>false</sortExecutions>
                                    <sortModules>true</sortModules>
                                    <sortPlugins>groupId,artifactId</sortPlugins>
                                    <sortProperties>true</sortProperties>
                                </sortPom>
                            </pom>
                            <yaml>
                                <includes>
                                    <include>${resources.dir}/*.yml</include>
                                    <include>${resources.dir}/*.yaml</include>
                                </includes>
                                <jackson>
                                    <features>
                                        <INDENT_OUTPUT>true</INDENT_OUTPUT>
                                        <ORDER_MAP_ENTRIES_BY_KEYS>true</ORDER_MAP_ENTRIES_BY_KEYS>
                                    </features>
                                    <yamlFeatures>
                                        <WRITE_DOC_START_MARKER>true</WRITE_DOC_START_MARKER>
                                        <MINIMIZE_QUOTES>true</MINIMIZE_QUOTES>
                                        <SPLIT_LINES>true</SPLIT_LINES>
                                    </yamlFeatures>
                                </jackson>
                                <trimTrailingWhitespace/>
                                <endWithNewline/>
                            </yaml>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>com.diffplug.spotless</groupId>
                                <artifactId>spotless-maven-plugin</artifactId>
                                <version>${spotless.version}</version>
                            </dependency>
                            <dependency>
                                <groupId>com.palantir.javaformat</groupId>
                                <artifactId>palantir-java-format</artifactId>
                                <version>${palantir-java.format.version}</version>
                            </dependency>
                        </dependencies>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                    <goal>apply</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
